# fennec-dl

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  requirements.txt
src/fennec_dl/: __init__.py
src/fennec_dl/config/: __init__.py  argparse_integration.py  config.py  dynamic_config.py  loader.py  static_config.py  yaml_loader.py
src/fennec_dl/errors/: __init__.py  config_loading_error.py  invalid_operation_error.py  readonly_error.py
tests/: argparse_integration_test.py  dynamic_config_test.py  loader_test.py  static_config_test.py  yaml_loader_test.py
